--- a/HTML_Tasks/Loginpages/CSS/StyleSheet1.css
+++ b/HTML_Tasks/Loginpages/CSS/StyleSheet1.css
@@ -2,19 +2,19 @@
 	box-sizing: border-box;
 }
 body {
-	background:rgba(0,0,0,0.1);
+	background:whitesmoke;
 	color: black;
-	line-height: 3;
-	font-family:Calibri;
+	line-height: 2;
+	font-family: Calibri;
 	padding: 4em;
 	max-width: 800px;
-	max-height: 3900px;
-	height:620px;
+	max-height:3900px;
+	height: 580px;
 	border: 1px solid lightgray;
 	
 }
-body{
-	margin:1.5em;
+body {
+	margin: 1.5em;
 }
 
 .container {
@@ -32,27 +32,27 @@ body{
 	-o-transition: .18s ease-out;
 	transition: .18s ease-out;
 }
-	.container:focus{
-		color:#b6ff00;
-		border:1px solid rgba(0,0,0,0.1);
-		box-shadow:inset 1px 2px 4px rgba(0,0,0,0.1) 0px 0px 8px rgba(0,0,0,0.2);
+	.container:focus {
+		color: s#b6ff00;
+		border: 1px solid rgba(0,0,0,0.1);
+		box-shadow: inset 1px 2px 4px rgba(0,0,0,0.1) 0px 0px 8px rgba(0,0,0,0.2);
 	}
 .container {
 	max-width: 1050px;
-	max-height:600px;
-	width:640px;
-	height:510px;
-	margin-left:auto;
+	max-height: 600px;
+	width: 640px;
+	height: 510px;
+	margin-left: auto;
 	margin-right: auto;
 	border-radius: 10px;
-	
 }
-h3{
-	font-family:Calibri;
-	margin-left:150px;
-	margin-right:150px;
-	margin-top:50px;
-	margin-bottom:30px;
+
+h3 {
+	font-family: Calibri;
+	margin-left: 150px;
+	margin-right: 150px;
+	margin-top: 50px;
+	margin-bottom: 30px;
 }
 
 .brand form {
@@ -60,16 +60,16 @@ h3{
 	grid-auto-rows: 1fr 1fr;
 	margin-left: 150px;
 	margin-right: 150px;
-	margin-top:40px;
-	margin-bottom:30px;
+	margin-top: 40px;
+	margin-bottom: 30px;
 }
 .brand form label{
 	display:block;
-	}
+}
 .brand form p{
 	margin:0;
 }
-	.brand form button {
+.brand form button {
 		width:75px;
 		height:35px;
 		border:0;
