--- a/HTML_Tasks/Loginpages/CSS/StyleSheet1.css
+++ b/HTML_Tasks/Loginpages/CSS/StyleSheet1.css
@@ -24,7 +24,7 @@ body {
 	border: 1px solid whitesmoke;
 	box-shadow: inset 0px 0px 8px lightgray;
 	font-family: inherit;
-	line-height: 1.45;
+	line-height:1em;
 	outline: none;
 	padding: 0.6em 1.45em 0.8em;
 	-webkit-transition: .18s ease-out;
@@ -33,7 +33,7 @@ body {
 	transition: .18s ease-out;
 }
 	.container:focus {
-		color: s#b6ff00;
+		color: #b6ff00;
 		border: 1px solid rgba(0,0,0,0.1);
 		box-shadow: inset 1px 2px 4px rgba(0,0,0,0.1) 0px 0px 8px rgba(0,0,0,0.2);
 	}
@@ -69,11 +69,3 @@ h3 {
 .brand form p{
 	margin:0;
 }
-.brand form button {
-		width:75px;
-		height:35px;
-		border:0;
-		background: blue;
-		color: #ffffff;
-		border-radius: 50px;
-	}
