--- a/HTML_Tasks_v0.2/Login/CSS/StyleSheet1.css
+++ b/HTML_Tasks_v0.2/Login/CSS/StyleSheet1.css
@@ -7,8 +7,7 @@ body {
 	line-height: 2;
 	font-family: Calibri;
 	padding: 1em;
-	width: 1300px;
-	height: 600px;
+	width: 1150px;
 	margin:1.5em;
 	margin-top:0px;
 }
@@ -23,10 +22,8 @@ body {
 	outline: none;
 	margin-top: 15px;
 	padding:20px;
-}
-.container {
-	width: 1250px;
-	height: 600px;
+	width:inherit;
+	height: 530px;
 	margin-left: -5px;
 	margin-right: auto;
 	border-radius: 10px;
