--- a/HTML_Tasks/Loginpages/CSS/StyleSheet1.css
+++ b/HTML_Tasks/Loginpages/CSS/StyleSheet1.css
@@ -7,24 +7,24 @@ body {
 	line-height: 2;
 	font-family: Calibri;
 	padding: 4em;
-	max-width: 800px;
+	max-width: 100%;
 	max-height:3900px;
 	height: 580px;
-	border: 1px solid lightgray;
+
 	
 }
 body {
 	margin: 1.5em;
 }
 
-table .container {
-	background: #fff;
+.container {
+	background: #FFFFFF;
 	color: #525865;
 	border-radius: 4px;
 	border: 1px solid whitesmoke;
 	box-shadow: inset 0px 0px 8px lightgray;
 	font-family: inherit;
-	line-height:1em;
+	line-height: 1em;
 	outline: none;
 	padding: 0.6em 1.45em 0.8em;
 	-webkit-transition: .18s ease-out;
@@ -32,12 +32,12 @@ table .container {
 	-o-transition: .18s ease-out;
 	transition: .18s ease-out;
 }
-	table .container:focus {
+	 .container:focus {
 		color: #b6ff00;
 		border: 1px solid rgba(0,0,0,0.1);
 		box-shadow: inset 1px 2px 4px rgba(0,0,0,0.1) 0px 0px 8px rgba(0,0,0,0.2);
 	}
-table .container {
+ .container {
 	max-width: 1050px;
 	max-height: 600px;
 	width: 640px;
